Keeping up to date.

--- a/Code/RL/dqn_analytics.ipynb
+++ b/Code/RL/dqn_analytics.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.0 (SDL 2.28.4, Python 3.11.6)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -25,7 +16,8 @@
     "import numpy as np\n",
     "from collections import deque\n",
     "import random\n",
-    "import pygame as PG"
+    "import pygame as PG\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -37,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading the model\n",
     "def load_model():\n",
     "    # Directory where your model files are stored\n",
-    "    model_directory = \"../../Model/New/\"\n",
+    "    model_directory = \"../../Model/DQN/\"\n",
     "\n",
     "    # Get a list of all files in the directory\n",
     "    all_files = os.listdir(model_directory)\n",
@@ -66,14 +58,14 @@
     "\n",
     "def load_single_model():\n",
     "    filename = \"Model_at_episode_0.pth\"\n",
-    "    model_path = os.path.join('../../Model/New/', filename)  # Adjusted path\n",
+    "    model_path = os.path.join('../../Model/DQN/', filename)  # Adjusted path\n",
     "    checkpoint = torch.load(model_path, map_location='cuda', weights_only=True)\n",
     "    return checkpoint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +97,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,6 +105,84 @@
    "source": [
     "models_df.keys()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                                [-7.0]\n",
+       "1     [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "2     [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "3     [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "4     [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "5     [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "6                           [-7.0, 0.09999999999999609]\n",
+       "7     [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "8     [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "9     [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "10    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "11    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "12    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "13    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "14    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "15    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "16    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "17       [-7.0, 0.09999999999999609, 4.899999999999981]\n",
+       "18    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "19    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "20    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "21    [-7.0, 0.09999999999999609, 4.899999999999981,...\n",
+       "Name: total_reward, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models_df['total_reward']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "2\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "3\n",
+      "22\n",
+      "23\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
